Version Changes for Hypermail
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

============================
HYPERMAIL VERSION pre-2.1.9:
============================

 Jose Kahan (Jul 30, 2003)
  - When rebuilding an archive, the attachment files were not being overwritten
    correctly. . Fixed this by adding an O_TRUNC flag.

 Jose Kahan (Jul 29, 2003)
  - Removed a memory leak in file.c as reported by insure.
  - The ietf-mbox option didn't work on "quoted printable" encoded attachments.    

 Peter McCluskey (July 22, 2003)
   Fix show_msg_links = 3 option (Jose's changes assumed it didn't exist).
   Updates to German from Tobias Weber.

 Kent Landfield (Jul 14, 2003)
   - When show_headers was used in print.c, the newline was not recognized
     early enough in printheaders. A check was added to assure the newline 
     was recognized properly.

 Kent Landfield (Jul 10, 2003)
  - Small typo in print.c corrected.
       fprintf(fp, "%s ^lt;<em>%s</em>&gt;"...

========================
HYPERMAIL VERSION 2.1.8:
========================

 Kent Landfield (Jun 28, 2003)
  - Updated pcre library with pcre-4.3 sources. We were distributing a 
    much older version. We were distributing version was 3.3 from 
    August 1, 2000. 
  - Updated FILES with the lcc files and the pcre changes.
  - Removed the deprecated "show_hr" from the tests/test.rc file.

 Jose Kahan (Jul 2, 2003)
  - parseurl didn't work well when an URL was quoted and enclosed inside 
    tags. Such as:
    <dd>some url</dd> </dd was put as part of the url.  

 Jose Kahan (Jul 1, 2003)
  - Added WAI enhancements to the list of indexes generated by hypermail.
    To make things perfect, we would need a new configuration option to give
    the format of the date in the list of indexes format. I hard coded it
    for the moment as I ran out of time to do it right now. As it has to
    use an abbreviated date format to avoid having a too big list of indexes,
    we can' t reuse the standard set_dateformat value.