@@ -6,6 +6,12 @@ HYPERMAIL VERSION pre-2.1.9:
 ============================
 
  Jose Kahan (Jul 30, 2003)
+  - After talking with Dom Hazel-Massieux, I added some extra WAI enhancements
+    to the list of indexes generated by hypermai. Specifically, the date
+    is shown in a verbose name in the title attribute of each entry and in 
+    an abbreviated version in the markup that's being displayed.
+
+ Jose Kahan (Jul 30, 2003)
   - When rebuilding an archive, the attachment files were not being overwritten
     correctly. . Fixed this by adding an O_TRUNC flag.
 
